RESOLVED FIXED299737
[WebXR][OpenXR] Content not shown when asking for canvas without alpha layer
https://bugs.webkit.org/show_bug.cgi?id=299737
Summary [WebXR][OpenXR] Content not shown when asking for canvas without alpha layer
Sergio Villar Senin
Reported 2025-09-29 07:07:57 PDT
Experiences like: * Plockle * Hello XR * Castle Builder * Jumpy Balls do not render anything on screen. The main difference is that they do not request an alpha channel
Attachments
Sergio Villar Senin
Comment 1 2025-09-29 08:32:20 PDT
EWS
Comment 2 2025-10-02 05:05:52 PDT
Committed 300872@main (60a2c8c774dc): <https://commits.webkit.org/300872@main> Reviewed commits have been landed. Closing PR #51507 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-10-02 05:06:16 PDT
Radar WebKit Bug Importer
Comment 4 2025-10-02 05:06:17 PDT
Note You need to log in before you can comment on or make changes to this bug.